moding debounce and cheat code

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -103,6 +103,7 @@
     <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/moment.js"></script> {# date formatting #}
+    <script src="{{ STATIC_URL }}js/unrest.js"></script>
     {% endcompress %}
     {% block extrajs %}{% endblock %}
     <script src="{{ STATIC_URL }}blog.js"></script>
