--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -86,9 +86,6 @@ function setHiddenFields(that) {
 <script type="text/javascript">
 $(document).ready(function() {$("select").change()});
 $(function() {
-  var HACKERKEYS = [];
-  var code = [38,38,40,40,37,39,37,39,66,65];
-  if (window.location.search.indexOf("open") != -1) { return }
   var unlocked = false;
   $("#m_table-hacker").addClass("grayscale-me").click(function() {
     if (unlocked) {
@@ -98,14 +95,12 @@ $(function() {
       return false;
     }
   });;
-  $(document).keyup(function(e) {
-    HACKERKEYS.push(e.keyCode);
-    var entries = HACKERKEYS.slice(-code.length);
-    for (var i = 0; i < code.length; ++i) { if (code[i] !== entries[i]) return false; }
+  function cheat() {
     $("#m_table-hacker").removeClass("grayscale-me");
     alert("Table-Hacker Membership Unlocked!");
     unlocked = true;
-  });
+  }
+  cheatCode(cheat,'open')
 });
 </script>
 <div class="clear"></div>
