rsvp works again

--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -101,6 +101,7 @@ session-list, event-list {
     .instructor-link { font-size: 2em; left: 5px; position: absolute; top: 0; }
     .admin-link { font-size: 2em; position: absolute; right: 5px; top: 0; }
     .full { color: @brand-danger; }
+    .alert { margin: 5px 0 0; }
   }
   .add_session_box {
     text-align: center;
