--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -131,7 +131,7 @@
 
 {% block extrajs %}
 {% include "_comment_media.html" %}
-<script type="riot/tag" src="/static/tags/course.tag"></script>
+<script type="riot/tag" src="/static/tags/course.tag?v=1.1"></script>
 <script>
 $(function() {
   $.get(
