fixing room_markers

--- a/main/static/less/map.less
+++ b/main/static/less/map.less
@@ -49,7 +49,7 @@ floorplan {
 
   #floorplan_wrapper {
     bottom: 0px;
-    left: 300px;
+    left: 320px;
     position: absolute;
     right: 0px;
     top: 0px;
@@ -59,4 +59,5 @@ floorplan {
     position: absolute;
     right: 50px;
   }
+  .left { width: 300px; }
 }
