accidentally lost the fee

--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -101,6 +101,13 @@ session-list, event-list {
   }
 }
 
+session-list .fee {
+  border-color: transparent;
+  position: absolute;
+  right: 0;
+  top: -54px;
+}
+
 .course .details {
   .closed_string {
     color: red;
