--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -26,15 +26,15 @@
 {% block extrajs %}
 {{ block.super }}
 {% compress js %}
-<script src="{{ STATIC_URL }}js/unrest.js"></script>
+<script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
 <script src="{{ STATIC_URL }}js/admin_index.js"></script>
 {% endcompress %}
-<script src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></script>
+<script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script>
 <script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/auth.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/input-fields.tag" type="riot/tag"></script>
-<script src="{{ STATIC_URL }}tags/modal.tag" type="riot/tag"></script>
+<script src="{{ STATIC_URL }}bower/ur/modal.tag" type="riot/tag"></script>
 {% compress css %}
 <link type="text/less" rel="stylesheet" href="{{ STATIC_URL }}less/admin_index.less" />
 {% endcompress %}
