--- a/main/templates/checkin.html
+++ b/main/templates/checkin.html
@@ -3,7 +3,7 @@
 {% block main %}<checkin></checkin>{% endblock %}
 
 {% block extrajs %}
-<script src="{{ STATIC_URL }}tags/modal.tag" type="riot/tag"></script>
+<script src="{{ STATIC_URL }}bower/ur/modal.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/checkin.tag" type="riot/tag"></script>
-<script>$(function(){riot.route("checkin");})</script>
+<script>$(function(){TXRX.route("checkin");})</script>
 {% endblock %}
