--- a/main/templates/dxf.html
+++ b/main/templates/dxf.html
@@ -11,7 +11,7 @@
 
 {% block extrajs %}
 <script type="riot/tag" src="{{ STATIC_URL }}tags/map.tag"></script>
-<script type="riot/tag" src="{{ STATIC_URL }}tags/modal.tag"></script>
+<script type="riot/tag" src="{{ STATIC_URL }}bower/ur/modal.tag"></script>
 <script>
 riot.mount("floorplan",{ locations: [1,2], });
 (function() {
