removing unecssary js file from old blog

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -106,7 +106,7 @@
     <script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
     {% endcompress %}
     {% block extrajs %}{% endblock %}
-    <script src="{{ STATIC_URL }}blog.js"></script>
+    <script src="{{ STATIC_URL }}js/blog.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
     <script>
       new Favico({animation : 'popFade'}).badge({{ pending_evaluations.count }});
