making edit links on inlines universal via edit_inline/tabular.html

--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -28,4 +28,7 @@
     riot.mount("modal",opts);
   };
 </script>
+<style>
+  .form-row .edit {font-size: 2em; position: absolute; right: 105%; text-decoration: none !important; z-index: 1; }
+</style>
 {% endblock %}
