adding private classes

--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -139,7 +139,7 @@ session-list .fee {
     position: absolute;
     width: 100%;
     .next_session:before { color: black; content: "Next Session: "; }
-    .full { color: @brand-danger; }
+    .private, .full { color: @brand-danger; }
     .open_sessions { color: @brand-success; }
     .full_sessions { color: @brand-danger; }
   }
