--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -30,5 +30,7 @@
 </script>
 <style>
   .form-row .edit {font-size: 2em; position: absolute; right: 105%; text-decoration: none !important; z-index: 1; }
+  .field-voters_present ul { width: 300px; }
+  .field-voters_present li { width: 150px; display: inline-block; }
 </style>
 {% endblock %}
