--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -23,7 +23,7 @@ Events at TXRX
       <td></td>
       <td></td>
       <td class="event">
-        <p class="public">Publc</p>
+        <p class="public">Public</p>
       </td>
       <td class="event">
         <p class="rsvp">RSVP/Signup Required</p>
