adding interface for orientation documents

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -324,6 +324,12 @@ h3.date {
 }
 
 .center { text-align: center; }
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  white-space: nowrap;
+}
 
 [data-before] {
   &:before {
