styling checkin a bit, creating a haveless page

--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -50,7 +50,8 @@ tool-checkout,search-users {
   a { cursor: pointer }
 }
 
-[ur-loading] {
+//#! TODO ur-loading is depracated in favor of data-loading
+[ur-loading],[data-loading] {
   position: relative;
   &:before {
     background: rgba(192,192,192,0.5);
