stashing to move from multi-form to single form

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -14,7 +14,7 @@ body.kiosk {
   footer, .navbar-collapse.collapse { display: none !important; }
   .navbar-header { float: none; text-align: center; }
   .navbar-brand { float: none; }
-  email-checkin, checkin {
+  checkin-email, checkin-home, checkin-register {
     display: block;
     margin: 0 auto;
     max-width: 100%;
@@ -22,4 +22,6 @@ body.kiosk {
     width: 450px;
     .btn { font-size:1.5em; }
   }
+  h1 { margin-bottom: 20px; }
+  p { margin-bottom: 1em; }
 }
