adding read receipt to contact emails

--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Contact us{% endblock %}
 {% block main %}
 <div class="col-sm-6 col-md-7">
   <h1 class="page_title">Contact Us</h1>
