--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -24,4 +24,8 @@ body.kiosk {
   }
   h1 { margin-bottom: 20px; }
   p { margin-bottom: 1em; }
+  checkin-home #id_email {
+    color: transparent;
+    &.show_email { color: inherit; }
+  }
 }
