removing contact page

--- a/course/templates/course/_myclasses.html
+++ b/course/templates/course/_myclasses.html
@@ -2,7 +2,7 @@
 <section class="events_box">
   <div class="alert alert-danger">
     After you pay for a class it should appear here. If it does not, please email
-    <a href="{% url "contact" %}?slug=enrollment">write us</a> and we'll look into it.
+    us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a> and we'll look into it.
   </div>
   {% if not user_sessions.0.past %}
   <h3 class="block_title">Upcoming Classes</h3>
