--- a/main/templates/sides/_contact_us.html
+++ b/main/templates/sides/_contact_us.html
@@ -2,7 +2,7 @@
   <h3 class="block_title">Contact Us</h3>
   <ul class="list-unstyled">
     <li><b>General Inquiry</b></li>
-    <li>Please contact us using <a href="{% url "contact" %}">this form</a>.</li>
+    <li>Got a question? Please contact us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a></li>
     <li>&nbsp;</li>
     <li><b>Hours of Operation</b></li>
     <li>Monday to Friday: 10 am to 10 pm</li>
