assign user to order if they have not already been assigned

--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -97,7 +97,7 @@ $(function() {
   });;
   function cheat() {
     $("#m_table-hacker,#m_maker-for-profit").removeClass("grayscale-me");
-    alert("Table-Hacker Membership Unlocked!");
+    alert("Table-Hacker and Maker Memberships Unlocked!");
     unlocked = true;
   }
   cheatCode(cheat,'open')
