incrementing version on simplecart

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -119,7 +119,7 @@
     <script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
     <script src="{{ STATIC_URL }}tags/course.tag?v=1.1" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}js/course.js?v=1.2"></script>
-    <script src="{{ STATIC_URL }}js/simpleCart.js"></script>
+    <script src="{{ STATIC_URL }}js/simpleCart.js?v=1.1"></script>
     <script src="{{ STATIC_URL }}js/cart.js"></script>
     {% block extrajs %}{% endblock %}
     <script src="{{ STATIC_URL }}js/blog.js"></script>
