close on success close rfid popup and show messages

--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -3,3 +3,13 @@ ur-input {
   margin-bottom: 1em;
   .errorlist { padding: 0; }
 }
+
+ur-form .btn {
+  margin-bottom: 20px;
+}
+
+.messagelist {
+  list-style: none;
+  margin: 0 auto 20px;
+  padding: 0;
+}
