--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,6 +32,7 @@
     {% compress js %}
     <script src="{{ STATIC_URL }}js/jquery-1.11.2.js"></script>
     <script src="{{ STATIC_URL }}bower/ur/unrest.js"></script>
+    <script src="{{ STATIC_URL }}bower/ur/router.js"></script>
     <script src="{{ STATIC_URL }}js/init.js"></script>
     <script src="{{ STATIC_URL }}lightbox/js/lightbox.min.js"></script>
     <script src="{{ STATIC_URL }}js/jsi18n.js"></script>
