--- a/redtape/templates/redtape/index.html
+++ b/redtape/templates/redtape/index.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 <div style="width: 550px; max-width: 100%; margin: 0 auto;">
-  <h1 class="center">Required Documents for {{ SITE_NAME }}</h1>
+  <h1 class="center">Required Documents for {{ settings.SITE_NAME }}</h1>
   <br />
   {% for document,signature in documents_signatures %}
   <div class="well center">
