--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>{% block full_title %}{% block title %}{% endblock %} - {{ SITE_NAME }}{% endblock %}</title>
+    <title>{% block full_title %}{% block title %}{% endblock %} - {{ settings.SITE_NAME }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="google-site-verification" content="5BXTZkZEubZ_azCsu7q469YXtV6tYbDOVeTQ2enG88o" />
     {% block extra_head %}{% endblock %}
@@ -40,10 +40,10 @@
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}lightbox/css/lightbox.css" />
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}cv/float.css" />
     {% block head %}{% endblock %}
-    <meta property="og:title" content="{% block fb_title %}{{ SITE_NAME }}: {{ SITE_TAGLINE }}{% endblock %}" />
-    <meta property="og:site_name" content="{{ SITE_NAME }}" />
+    <meta property="og:title" content="{% block fb_title %}{{ settings.SITE_NAME }}: {{ SITE_TAGLINE }}{% endblock %}" />
+    <meta property="og:site_name" content="{{ settings.SITE_NAME }}" />
     <meta property="og:url" content="{{ request.build_absolute_uri }}" />
-    <meta property="og:description" content="{% block fb_description %}{{ SITE_NAME }} is Houston's nonprofit Hackerspace. Since 2008, TXRX has aimed to provide a communal space for the public to learn and create. Located in the East End and serving the greater Houston area, TXRX offers members use of 30,000 square feet of work space including a wood shop, metal shop, bike shop, rapid fabrication lab, electronics lab, art lab, computer lab, and coworking space. A diverse series of classes are taught with the goal of making seemingly complex skills attainable to anyone. By creating an open environment to share knowledge, collaborate, and build, TXRX has become the home for 250 thinkers, tinkerers, hackers, artists, crafters, coders, and makers.{% endblock %}" />
+    <meta property="og:description" content="{% block fb_description %}{{ settings.SITE_NAME }} is Houston's nonprofit Hackerspace. Since 2008, TXRX has aimed to provide a communal space for the public to learn and create. Located in the East End and serving the greater Houston area, TXRX offers members use of 30,000 square feet of work space including a wood shop, metal shop, bike shop, rapid fabrication lab, electronics lab, art lab, computer lab, and coworking space. A diverse series of classes are taught with the goal of making seemingly complex skills attainable to anyone. By creating an open environment to share knowledge, collaborate, and build, TXRX has become the home for 250 thinkers, tinkerers, hackers, artists, crafters, coders, and makers.{% endblock %}" />
     {#! <meta property="og:image" content="https:///txrxlabs.org/" /> #}
     <meta property="fb:app_id" content="" />
     <!--[if lt IE 9]>
