changing site name variable in a few places

--- a/membership/templates/membership/settings.html
+++ b/membership/templates/membership/settings.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load txrx_tags %}
 
-{% block full_title %}Settings - {{ SITE_NAME }}{% endblock %}
+{% block full_title %}Settings - {{ settings.SITE_NAME }}{% endblock %}
 {% block header_content %}Edit your account settings{% endblock %}
 
 {% block content %}
