--- a/tool/templates/tool/tool_detail.html
+++ b/tool/templates/tool/tool_detail.html
@@ -29,22 +29,31 @@
     <a href="{{ link.url }}">{{ link.title }}</a><br />
     {% endfor %}
     {% endif %}
-    {% with permissions=tool.permission_set.all %}
-    {% if permissions and settings.DEBUG %}
+    {% if tool.number_required_courses and settings.DEBUG %}
     <div>
-      {% if permission.length == 1 %}<h2>This tool requires the following permission:</h2>{% endif %}
-      {% if permission.length != 1 %}<h2>This tool requires any of the following permissions:</h2>{% endif %}
-      {% for permission in permissions %}
+      <h3 class="block_title">Required class{{ tool.number_required_courses|pluralize:"es" }}:</h3>
+      {% if tool.single_courses %}
       <div class="well">
-        <h3>{{ permission }}</h3>
-        {% for criterion in permission.criteria.all %}
-        <a class="btn btn-primary criteria_check{{ criterion.id }}">{{ criterion }}</a>
+        {% if tool.single_courses|length != 1%}
+        <h3>All these classes:</h3>
+        {% endif %}
+        {% for course in tool.single_courses %}
+        <a class="btn btn-primary btn-block" data-course-check="{{ course.id }}"
+           href="{{ course.get_absolute_url }}">{{ course }}</a>
+        {% endfor %}
+      </div>
+      {% endif %}
+      {% for group in tool.group_courses %}
+      <div class="well">
+        <h3>Any of these classes:</h3>
+        {% for course in group %}
+        <a class="btn btn-primary btn-block" data-course-check="{{ course.id }}"
+           href="{{ course.get_absolute_url }}">{{ course }}</a>
         {% endfor %}
       </div>
       {% endfor %}
     </div>
     {% endif %}
-    {% endwith %}
     {% if tool.materials.all %}
     <h4>Material{{ tool.materials.all|pluralize:"s" }} used</h4>
     {{ tool.materials.all|join:", " }}
