--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -6,7 +6,7 @@
   font-weight: bold;
 }*/
 body { width: 100%;}
-body,html { overflow-x: hidden; }
+body,html { height: 100%; overflow-x: hidden; }
 
 @media (max-width: @screen-xs-max) {
   .container{
