load classes when checkin occurs

--- a/main/templates/registration/_login_form.html
+++ b/main/templates/registration/_login_form.html
@@ -18,7 +18,7 @@
   </div>
   {% endif %}
   <div class="form-group">
-    <label>&nbsp;</label><input type="submit" value="Log in" />
+    <label>&nbsp;</label><input type="submit" class="btn btn-primary" value="Log in" />
   </div>
   <div>
     <a class="blue" href="/accounts/register/">Register</a> |
