load kiosk with body class

--- a/main/templates/beta.html
+++ b/main/templates/beta.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}{% endblock %}
+{% block main %}{% endblock %}
 
 {% block extrajs %}
 <script type="riot/tag" src="{{ STATIC_URL }}tags/checkin.tag"></script>
