--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -6,24 +6,7 @@ body.kiosk {
     height: 90%;
     justify-content: center;
   }
-  header, #main { flex-basis: initial }
-  .navbar {
-    position: relative;
-    &:before {
-      content: "";
-      display: block;
-      bottom: 0;
-      left: 0;
-      position: absolute;
-      right:0;
-      top: 0;
-    }
-  }
-  footer, .navbar-collapse.collapse { display: none !important; }
-  .navbar-header { float: none; text-align: center; }
-  .navbar-brand { float: none; }
-  .navbar { margin-top: 0; padding-top: 0; }
-  .navbar-toggle { display: none; }
+  nav, footer, .navbar-collapse.collapse { display: none !important; }
   checkin-email, checkin-home, checkin-register {
     display: block;
     margin: 0 auto;
