adding permission description and moving view to membership

--- a/membership/templates/membership/memberships.html
+++ b/membership/templates/membership/memberships.html
@@ -22,7 +22,7 @@ function setHiddenFields(that) {
 <br />
 <div id="memberships" class="row">
   {% for group in groups %}
-  <div class="{% if forloop.first %}col-lg-offset-2 {% endif %}col-lg-4 col-sm-6">
+  <div class="{#{% if forloop.first %}col-lg-offset-2 {% endif %}#}col-lg-4 col-sm-6">
     {% if groups|length != 1 %}<h2>{{ group }} Membership</h2>{% endif %}
     {% for m in group.active_levels %}
     <span class="well membership">
