updating permission table to include levels

--- a/main/static/less/tool.less
+++ b/main/static/less/tool.less
@@ -14,7 +14,7 @@
 
 .tp_table {
   .row { margin-bottom: 20px; }
-  h1, li {
+  h2, li {
     list-style: none;
     position: relative;
     padding-right: 1em;
@@ -34,4 +34,5 @@
     }
   }
   span { display: block; padding-right: 0.25em; position: absolute; top: 0; right: 100%; }
+  ul, p { padding-left: 2em; }
 }
